Fixed icon spacing and replaced bannerfade with original ticker

--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -5794,6 +5794,7 @@ button.close {
 }
 .modal-header .close {
   margin-top: -2px;
+  margin-right: 3px;
 }
 .modal-title {
   margin: 0;
